[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/items/test_item/test_item.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/ui_scripts/templates/RecipeRow.gd" type="Script" id=2]

[node name="RecipeRow" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.083
margin_bottom = -49.8
rect_min_size = Vector2( 0, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="H"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="V" type="VBoxContainer" parent="H"]
margin_left = 54.0
margin_right = 970.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="ItemNameLabel" type="Label" parent="H/V"]
margin_right = 916.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item Name"
valign = 1

[node name="IngredientsLabel" type="Label" parent="H/V"]
margin_top = 25.0
margin_right = 916.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "(Ingredient 1 x69, Ingredient 2 x420)"
valign = 1

[node name="CraftButton" type="Button" parent="H"]
margin_left = 974.0
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "Craft"

[connection signal="pressed" from="H/CraftButton" to="." method="_on_CraftButton_pressed"]
